cmake_minimum_required(VERSION 3.9)
project(CSS343ASS_4)

set(CMAKE_CXX_STANDARD 11)

add_executable(CSS343ASS_4 main.cpp Movie.cpp Movie.h Comedy.cpp Comedy.h Drama.cpp Drama.h Classics.cpp Classics.h Inventory.cpp Inventory.h BinarySearchTree.cpp BinarySearchTree.h HashTable.cpp HashTable.h Transaction.cpp Transaction.h MoveType.cpp MoveType.h Customer.cpp Customer.h)